Added functionality to find an item on the Amazon store

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,7 +16,8 @@
     "https://*/*",
     "activeTab",
     "declarativeContent",
-    "cookies"
+    "storage",
+    "webNavigation"
   ],
   "manifest_version": 2
 }
