--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,11 +4,18 @@
   "description": "Amazon Price Watcher",
   "background": {
     "scripts": [
-      "static/js/background.js"
+      "static/js/background.js",
+      "static/js/backgroundTabs.js"
     ],
     "persistent": false
   },
-  "page_action": {
+  "browser_action": {
+    "default_icon": {
+      "16": "static/icons/default_icon16.png",
+      "32": "static/icons/default_icon32.png",
+      "48": "static/icons/icon48.png",
+      "128": "static/icons/icon128.png"
+    },
     "default_popup": "popup.html"
   },
   "permissions": [
