--- a/src/manifest.json
+++ b/src/manifest.json
@@ -14,7 +14,7 @@
       "48": "icons/icon48.png",
       "128": "icons/icon128.png"
     },
-    "default_popup": "popup/popup.html"
+    "default_popup": "index.html"
   },
   "background": {
     "scripts": [
