--- a/package.json
+++ b/package.json
@@ -4,44 +4,47 @@
   "description": "",
   "license": "MIT",
   "scripts": {
-    "prettier": "prettier \"src/**/*.{js,vue}\"",
-    "prettier:write": "npm run prettier -- --write",
-    "build": "cross-env NODE_ENV=production webpack --hide-modules",
-    "build:dev": "cross-env NODE_ENV=development webpack --hide-modules",
-    "build-zip": "node scripts/build-zip.js",
-    "watch": "npm run build -- --watch",
-    "watch:dev": "cross-env HMR=true npm run build:dev -- --watch"
+    "build": "NODE_ENV=production webpack --hide-modules",
+    "start": "webpack-dev-server --mode development"
   },
   "husky": {
     "hooks": {}
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "parse5": "^5.1.1",
+    "tailwindcss": "^1.1.3",
+    "typeface-nunito": "^0.0.72",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.1"
+    "vue-axios": "^2.1.5",
+    "vue-password-strength-meter": "^1.6.1",
+    "vue-router": "^3.1.3",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-optional-chaining": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/runtime-corejs3": "^7.4.0",
+    "@fullhuman/postcss-purgecss": "^1.3.0",
     "@types/chrome": "^0.0.74",
-    "archiver": "^3.0.0",
+    "autoprefixer": "^9.7.0",
     "babel-loader": "^8.0.2",
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^4.5.3",
     "core-js": "^3.0.1",
-    "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
-    "ejs": "^2.6.1",
+    "cssnano": "^4.1.10",
     "file-loader": "^1.1.11",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.9.3",
-    "prettier": "^1.17.1",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
+    "url-loader": "^3.0.0",
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
-    "webpack-extension-reloader": "^1.1.0"
+    "webpack-dev-server": "^3.9.0"
   }
 }
