--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "cheerio": "^1.0.0-rc.3",
+    "jsonframe-cheerio": "^3.0.1",
     "parse5": "^5.1.1",
     "tailwindcss": "^1.1.3",
     "typeface-nunito": "^0.0.72",
@@ -19,6 +21,7 @@
     "vue-axios": "^2.1.5",
     "vue-password-strength-meter": "^1.6.1",
     "vue-router": "^3.1.3",
+    "vue-truncate-filter": "^1.1.7",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
