Added tailwindcss-animatecss package

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonframe-cheerio": "^3.0.1",
     "parse5": "^5.1.1",
     "tailwindcss": "^1.1.3",
+    "tailwindcss-animatecss": "^0.2.7",
     "typeface-nunito": "^0.0.72",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
