--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
   "dependencies": {
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
+    "json-cookie": "^1.0.0",
     "jsonframe-cheerio": "^3.0.1",
+    "lodash": "^4.17.15",
     "parse5": "^5.1.1",
     "tailwindcss": "^1.1.3",
     "tailwindcss-animatecss": "^0.2.7",
     "typeface-nunito": "^0.0.72",
+    "vee-validate": "^3.2.5",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-password-strength-meter": "^1.6.1",
     "vue-router": "^3.1.3",
     "vue-truncate-filter": "^1.1.7",
+    "vuex": "^3.1.2",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
