--- a/src/manifest.json
+++ b/src/manifest.json
@@ -27,7 +27,7 @@
     "https://*/*",
     "activeTab",
     "declarativeContent",
-    "storage",
-    "webNavigation"
+    "webNavigation",
+    "cookies"
   ]
 }
