--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Lyst",
-  "version": "0.1.0-alpha.0",
+  "version": "0.1.1-alpha.0",
   "description": "",
   "license": "MIT",
   "scripts": {
@@ -31,7 +31,10 @@
     "vue-router": "^3.1.3",
     "vue-truncate-filter": "^1.1.7",
     "vuex": "^3.1.2",
-    "zxcvbn": "^4.4.2"
+    "zxcvbn": "^4.4.2",
+    "minimist": ">=1.2.2",
+    "acorn": ">=6.4.1",
+    "serialize-javascript": ">=2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
@@ -43,19 +46,19 @@
     "autoprefixer": "^9.7.0",
     "babel-loader": "^8.0.2",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^4.5.3",
+    "copy-webpack-plugin": "^5.1.1",
     "core-js": "^3.0.1",
     "css-loader": "^2.1.1",
     "cssnano": "^4.1.10",
     "file-loader": "^1.1.11",
     "mini-css-extract-plugin": "^0.4.4",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.13.1",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "url-loader": "^3.0.0",
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.20.2",
+    "webpack": "^4.42.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.9.0"
   }
